--- a/KgysProjectIdentity.Web/Views/Cctv/Products.cshtml
+++ b/KgysProjectIdentity.Web/Views/Cctv/Products.cshtml
@@ -29,12 +29,14 @@
         }
     </div>
 </div>
-
-<div class="offset-10 form-group pull-right mb-3">
-    <input type="text" class="search form-control" placeholder="Aranılacak Kelimeyi Giriniz" style="width:300px">
-    <span class="counter pull-right"></span>
-</div>
-<div class="container-fluid">
+<div class="container-fluid mt-3" style="display:flex;flex-direction:row">
+    <a class="btn btn-secondary d-md-block mb-1 text-center" asp-controller="Cctv" asp-action="Index" asp-route-id="@ViewBag.ProjectId" style="width:100px;max-height:40px">Geri Dön</a>
+    <div class="offset-9 form-group pull-right">
+        <input type="text" class="search form-control" placeholder="Aranılacak Kelimeyi Giriniz" style="width:300px">
+        <span class="counter pull-right"></span>
+    </div>
+    </div>
+<div class="container-fluid">   
     <table class="table table-striped table-hover text-center table-bordered results" style="width:100%" id="dataTable">
         <thead>
             <tr class="table-light">
