--- a/KgysProjectIdentity.Web/Views/Cctv/Index.cshtml
+++ b/KgysProjectIdentity.Web/Views/Cctv/Index.cshtml
@@ -98,6 +98,7 @@
             </tr>
             @foreach (var item in ViewBag.ProjectDetail)
             {
+                string sprt = TableRowsColor.RowsColor(item.Status!);
                 i++;
                 <tr class="table-light">
                     <th scope="row">@i</th>
@@ -105,7 +106,7 @@
                     <td><a role="button" asp-controller="Cctv" asp-action="ProjectFullDetail" asp-route-id="@item.Id" style="color:black">@item.Unit</a></td>
                     <td>@item.ExProjectName</td>
                     <td>@item.ProjectReason</td>
-                    <td>@item.Status</td>
+                    <td class="@sprt">@item.Status</td>
                     <td style="min-width:300px">
                         <div style="display:flex">
                             <div style="width:80%;margin-right:1%;">
