--- a/KgysProjectIdentity.Web/Views/TenderProjects/Update.cshtml
+++ b/KgysProjectIdentity.Web/Views/TenderProjects/Update.cshtml
@@ -137,7 +137,7 @@
             <div id="content1" class="mx-lg-4">
                 <div class="mb-2">
                     <label asp-for="TimeOfWork" class="form-label">İşin Süresi(Gün) :</label>
-                    <input type="number" class="form-control" asp-for="TimeOfWork">
+                    <input type="number" class="form-control" asp-for="TimeOfWork" value="0">
                     <span class="text-danger" asp-validation-for="TimeOfWork"></span>
                 </div>
                 <div class="mb-2">
