--- a/KgysProjectIdentity.Web/Views/SpareMaterials/MaterialDetailAdd.cshtml
+++ b/KgysProjectIdentity.Web/Views/SpareMaterials/MaterialDetailAdd.cshtml
@@ -8,17 +8,25 @@
         #menu {
             display: inline-block;
             width: 40%;
+            min-width: 400px;
         }
 
         #content {
             display: inline-block;
             width: 40%;
+            min-width: 400px;
         }
 
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
+        }
     </style>
 </head>
 <body>
-    <div class="col-md-4 offset-md-4">
+    <div class="text-center">
         <h1>Detaylı Ürün Ekleme Sayfası</h1>
         @if (TempData["status"] != null)
         {
@@ -51,7 +59,7 @@
                     <input type="number" class="form-control" asp-for="Properties">
                     <span class="text-danger" asp-validation-for="Properties"></span>
                 </div>
-                <div class="mb-2">
+                <div class="mb-3">
                     <label asp-for="MaterialDetails" class="form-label">Birim :</label>
                     <select class="form-select" asp-for="MaterialDetails" asp-items="ViewBag.MaterialDetailSelectList">
                     </select>
@@ -62,15 +70,20 @@
                     <input type="number" class="form-control" asp-for="Pieces">
                     <span class="text-danger" asp-validation-for="Pieces"></span>
                 </div>
-                <div class="mb-2">
+                <div class="mb-3">
                     <label asp-for="Measurement" class="form-label">Ölçütü :</label>
                     <select class="form-select" asp-for="Measurement" asp-items="ViewBag.MaterialMeasurementSelectList">
                     </select>
                     <span class="text-danger" asp-validation-for="Measurement"></span>
                 </div>
+                <div class="mb-3">
+                    <label asp-for="Descriptions" class="form-label">Açıklama :</label>
+                    <input type="text" class="form-control" asp-for="Descriptions">
+                    <span class="text-danger" asp-validation-for="Descriptions"></span>
+                </div>
             </div>
             <div id="content">
-                <div class="mb-2">
+                <div class="mb-3">
                     <label asp-for="RequestOrGet" class="form-label">Talep/Alım :</label>
                     <select class="form-select" asp-for="RequestOrGet" required>
                         <option></option>
@@ -91,26 +104,26 @@
                 </div>
                 <div class="mb-3">
                     <label asp-for="UpdateDate" class="form-label">Talep Tarihi :</label>
-                    <input type="datetime" class="form-control" asp-for="UpdateDate" required>
+                    <input type="date" class="form-control" asp-for="UpdateDate" required>
                     <span class="text-danger" asp-validation-for="UpdateDate"></span>
                 </div>
-                <div class="mb-3">
-                    <label asp-for="Descriptions" class="form-label">Açıklama :</label>
-                    <input type="text" class="form-control" asp-for="Descriptions">
-                    <span class="text-danger" asp-validation-for="Descriptions"></span>
+                <div class="mb-4">
+                    <label asp-for="TenderId" class="form-label">Alım İhale :</label>
+                    <select class="form-select" asp-for="TenderId" asp-items="ViewBag.TenderSelectList">
+                        <option></option>
+                    </select>
+                    <span class="text-danger" asp-validation-for="TenderId"></span>
+                </div>
+                <div class="mb-4">
+                    <label class="form-label"></label>
+                    <button type="submit" class="btn btn-outline-primary d-md-block">Kaydet</button>
                 </div>
             </div>
-
-            <div class="mb-4">
-                <button type="submit" class="btn btn-outline-primary d-md-block">Kaydet</button>
-            </div>
-
-
         </form>
 
     </div>
     @section Scripts {
-        
+
         <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
         <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
         <script src="~/lib/jquery-validation/dist/messages_tr.js"></script>
