--- a/KgysProjectIdentity.Web/Views/SpareMaterials/MaterialDetailUpdate.cshtml
+++ b/KgysProjectIdentity.Web/Views/SpareMaterials/MaterialDetailUpdate.cshtml
@@ -10,18 +10,26 @@
         #menu {
             display: inline-block;
             width: 40%;
+            min-width: 400px;
         }
 
         #content {
             display: inline-block;
             width: 40%;
+            min-width:400px;
         }
 
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
+        }
     </style>
 </head>
 <body>
-    <div class="col-md-4 offset-md-4">
-        <h1>Detaylı Ürün Ekleme Sayfası</h1>
+    <div class="text-center">
+        <h1>Detaylı Ürün Güncelleme Sayfası</h1>
         @if (TempData["status"] != null)
         {
             <div class="alert alert-success text-center" role="alert">
@@ -50,9 +58,10 @@
                 <div class="mb-3">
                     <label asp-for="Properties" class="form-label">Özellik :</label>
                     <input type="number" class="form-control" asp-for="Properties">
+                    <input type="hidden" asp-for="Id" />
                     <span class="text-danger" asp-validation-for="Properties"></span>
                 </div>
-                <div class="mb-2">
+                <div class="mb-3">
                     <label asp-for="MaterialDetails" class="form-label">Birim :</label>
                     <select class="form-select" asp-for="MaterialDetails" asp-items="ViewBag.MaterialDetailSelectList">
                     </select>
@@ -63,15 +72,20 @@
                     <input type="number" class="form-control" asp-for="Pieces">
                     <span class="text-danger" asp-validation-for="Pieces"></span>
                 </div>
-                <div class="mb-2">
+                <div class="mb-3">
                     <label asp-for="Measurement" class="form-label">Ölçütü :</label>
                     <select class="form-select" asp-for="Measurement" asp-items="ViewBag.MaterialMeasurementSelectList">
                     </select>
                     <span class="text-danger" asp-validation-for="Measurement"></span>
                 </div>
+                <div class="mb-3">
+                    <label asp-for="Descriptions" class="form-label">Açıklama :</label>
+                    <input type="text" class="form-control" asp-for="Descriptions">
+                    <span class="text-danger" asp-validation-for="Descriptions"></span>
+                </div>
             </div>
             <div id="content">
-                <div class="mb-2">
+                <div class="mb-3">
                     <label asp-for="RequestOrGet" class="form-label">Talep/Alım :</label>
                     <select class="form-select" asp-for="RequestOrGet" required>
                         <option></option>
@@ -92,21 +106,21 @@
                 </div>
                 <div class="mb-3">
                     <label asp-for="UpdateDate" class="form-label">Talep Tarihi :</label>
-                    <input type="datetime" class="form-control" asp-for="UpdateDate" required>
+                    <input type="date" class="form-control" asp-for="UpdateDate" required>
                     <span class="text-danger" asp-validation-for="UpdateDate"></span>
                 </div>
-                <div class="mb-3">
-                    <label asp-for="Descriptions" class="form-label">Açıklama :</label>
-                    <input type="text" class="form-control" asp-for="Descriptions">
-                    <span class="text-danger" asp-validation-for="Descriptions"></span>
+                <div class="mb-4">
+                    <label asp-for="TenderId" class="form-label">Alım İhale :</label>
+                    <select class="form-select" asp-for="TenderId" asp-items="ViewBag.TenderSelectList">
+                        <option></option>
+                    </select>
+                    <span class="text-danger" asp-validation-for="TenderId"></span>
+                </div>
+                <div class="mb-4">
+                    <label class="form-label"></label>
+                    <button type="submit" class="btn btn-outline-primary d-md-block">Güncelle</button>
                 </div>
             </div>
-
-            <div class="mb-4">
-                <button type="submit" class="btn btn-outline-primary d-md-block">Kaydet</button>
-            </div>
-
-
         </form>
 
     </div>
