02032025 SpareMaterialIndex de excel kapatıldı

--- a/KgysProjectIdentity.Web/Views/SpareMaterials/MaterialDetailIndex.cshtml
+++ b/KgysProjectIdentity.Web/Views/SpareMaterials/MaterialDetailIndex.cshtml
@@ -33,7 +33,7 @@
 </div>
 <div class="container-fluid mt-lg-5">
 
-    <a class="btn btn-secondary" role="button" asp-controller="" asp-action="">Excele Aktar</a>
+    @* <a class="btn btn-secondary" role="button" asp-controller="" asp-action="">Excele Aktar</a> *@
     <a class="btn btn-secondary" role="button" asp-controller="SpareMaterials" asp-action="MaterialDetailAdd" asp-route-id="@ViewBag.SpareMaterialsCode">Talep/Alım Ekle</a>
 
 
